--- a/_posts/2019-07-05-the-us-narrative-today.html
+++ b/_posts/2019-07-05-the-us-narrative-today.html
@@ -2636,107 +2636,107 @@ stories:
   domain: http://www.sweetwaterreporter.net/
   link: https://www.sweetwaterreporter.net/football-t-shirts-wear-your-passion-with-pride/
 images:
-- name: paris-paris-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-hot-spicy.jpg
-- name: old-gas-pumps-oldgaspumps-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-diego-rivera1.jpg
-- name: fence-mexico-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-purp-paper.jpg
-- name: nyc-flag-nycflag-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-circuit.jpg
-- name: aws-s3-stories-statue-face-open-mouth-blue-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-blue-circuit.png
-- name: beach-rocks-beach-rocks-currents-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-oily-mcoilface.jpg
-- name: oldroad-old-road-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dark-rain.jpg
-- name: border-fence-border-fence-on-hill-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-marcel-duchamp.jpg
-- name: rain-princess-IMG_7954.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7954.jpg
-- name: oldsmallboat-oldsmallboat-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-atari-missle.jpg
-- name: powerlines-power-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-blue-circuit.jpg
-- name: oldroad-old-road-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-yellow-collage.jpg
-- name: fence-mexico-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-crunch-paper.jpg
-- name: downtown-trucksilo-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-aqua.jpg
-- name: oldcabin-store-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-post-modern.jpg
-- name: oldhouse-oldhouse-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-deep-connections.jpg
-- name: docks-docks-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-smooth-ride.jpg
-- name: rockingchair-rockingchair-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-plentiful.jpg
-- name: old-door-lock-old-door-lock-2-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-circuit-5.jpg
-- name: razorwire-DSC-0080-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-blue-brush.jpg
-- name: stories-new-27-93-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-27-93-800-500-0-max-0--5--5.jpg
-- name: gypsy-wagon-gypsywagon-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-creativity.jpg
-- name: victoria-victoria-corner-hotel-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-aqua.jpg
-- name: aws-s3-mountainlake-mountainlake-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still.jpg
-- name: mistywoods-babyfoot-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-umberto-bocc.jpg
-- name: amusement-park-amusement-park-2-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-attack-planes.jpg
-- name: white-house-lawn-white-house-window-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-smooth-ride.jpg
-- name: store-on-corner-oldcabin-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-blue-circuit.jpg
-- name: oldhousecars-house-old-cars-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-constitution.jpg
-- name: oldhousecars-house-old-cars-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-gan-vogh.jpg
-- name: old-church-oldchurch-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dry-skin.jpg
-- name: mistywoods-babyfoot-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-green-zuma.jpg
-- name: yosemite-yosemite-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-umberto-bocc.jpg
-- name: nazi-invasion-DSC_0062.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0062.jpg
-- name: window-window-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-atari-asteroids.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-5.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-atari-asteroids.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-atari-asteroids.png
-- name: birdhouse-birdhouse-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-smoking-cigarette.jpg
-- name: udnie-IMG_1184.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_1184.jpg
-- name: abe-lincoln-one-purple-storm-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-storm-file-00-00-00-00.jpg
-- name: crow-crow-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-nazi-poster.jpg
-- name: store-on-corner-store-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-yellow-collage.jpg
-- name: razorcliff-razorcliff-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dali-three.jpg
-- name: dc-statue-dcstatue-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-colored-circuits.jpg
-- name: razorcliff-razorcliff-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dark-soul.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dark-rain.jpg
-- name: castle-wall-DSC-0067-alien-goggles.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-alien-goggles.JPG
-- name: border-crossing-bordercrossing-alien-goggles.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-alien-goggles.png
-- name: dc-statue-dcstatue-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-alberto-giacometti.jpg
-- name: old-school-house-old-schoolhouse-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-crabapple.jpg
-- name: oldroad-old-road-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-ww2-color.jpg
+- name: white-house-lawn-white-house-window-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dali-two.jpg
+- name: subway-subway-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dark-soul.jpg
+- name: locked-up-steam-lock-up-steam-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-crafty-painting.jpg
+- name: aws-s3-stories-adam-smith-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-adam-smith-dali-three.jpg
+- name: stories-algo-microservices.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-algo-microservices.jpg
+- name: capital-battle-capitolbattle-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-blue-granite.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-matrix.jpg
+- name: ""
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/
+- name: dc-statue-dcstatue-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-alien-goggles.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-marcel-duchamp.jpg
+- name: window-window-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-light-dali.jpg
+- name: aws-s3-stories-new-57-64-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-57-64-800-500-0-max-0--5--5.jpg
+- name: paris-paris-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-smoking-cigarette.jpg
+- name: castle-wall-DSC-0067-purple-pond.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-purple-pond.JPG
+- name: blossombar-dark-rain-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-rain-file-00-00-50-62.jpg
+- name: store-on-corner-store-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-alien-goggles.jpg
+- name: old-door-lock-old-door-lock-2-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-green-zuma.jpg
+- name: mistywoods-babyfoot-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-diego-rivera1.jpg
+- name: old-barn-old-barn-1500-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-light-dali.jpg
+- name: 35201856153_61bc075e4b-wreck.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-wreck.jpg
+- name: two-sattelite-dishes-uncle-sam.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/two-sattelite-dishes-uncle-sam.jpg
+- name: containership-containership-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-pablo-blue.jpg
+- name: lincoln-memorial-lincolnmemorial-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-atari-missle.jpg
+- name: flower-barbed-wire-flower-barbed-wire-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-light-dali.jpg
+- name: mistywoods-babyfoot-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-emily-carr.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-blue-granite.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-granite.JPG
+- name: nazi-invasion-IMG_6436.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6436.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-attack-planes.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-ww2-color.jpg
+- name: yosemite-yosemite-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-kand-two.jpg
+- name: sand-hand-sand-hand-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-creativity.jpg
+- name: school-clouds-church-clouds-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-deep-connections.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dark-dali.jpg
+- name: ellis-island-ellisisland-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-ww2-dresden.jpg
+- name: border-fence-border-fence-on-hill-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-bright-sand.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-space-pizza.jpg
+- name: capital-battle-capitolbattle-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-smooth-ride.jpg
+- name: aws-s3-square-76-73-800-500-0-max-0--1--1-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-76-73-800-500-0-max-0--1--1-square.jpg
+- name: legal-statue-legalstatue-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-colorful-dream.jpg
+- name: san-francisco-street-view-san-francisco-street-view-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-free-woman.jpg
+- name: eduardo-eduardo-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-blue-circuit.jpg
+- name: locked-up-steam-lock-up-steam-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-aqua.jpg
+- name: blossombar-aqua-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-aqua-file-00-00-50-62.jpg
+- name: aws-s3-stories-new-68-76-800-500-0-max-0-1--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-68-76-800-500-0-max-0-1--5.jpg
+- name: blossombar-oily-mcoilface-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-oily-mcoilface-file-00-00-00-00.jpg
+- name: dragon-desert-desert-dragon-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-kand-two.jpg
+- name: christianity-christianity-under-construction-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-really-hot.jpg
+- name: oldcabin-oldcabin-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-internet-numbers.jpg
+- name: wind-mills-windmills-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-crabapple.jpg
+- name: border-crossing-bordercrossing-deep-connections.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-deep-connections.png
+- name: downtown-los-angeles-downtown-la.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la.JPG
 ---
 Louisville Basketball Holds Breath Amidst Possible Allegations.&nbsp;Star Singer Detained And Deported From Iran.&nbsp;Yes, Trump Makes Nice With Dictators, But His Tough Actions Count More.&nbsp;Immigrants Fired From Trump Clubs Seek White House Meeting.&nbsp;Tradition A Driving Force Behind Fairview Festivities.&nbsp;Feds Cite Seattle Childrens Hospital For Deadly Mold Problem.&nbsp;Town Prepares For 49th Annual July 4th Festival.&nbsp;Trump Considering Executive Order For Census Question.&nbsp;
